# seisviewer2d

./: .gitignore  AGENTS.md  Dockerfile  README.md  agent.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  ruff.strict.txt  ruff.toml  work_schema.md
.devcontainer/: compose-dev.yaml  devcontainer.json  requirements-dev.txt
.issue_forge/: project.sh
app/: main.py  package-lock.json  package.json  vite.config.ts  vitest.config.mjs
docs/: README.md  refraction_static.md  static_correction.md  time_term_static_correction.md
scripts/: create_perf_tracestore.py  create_refraction_static_ui_fixture.py  smoke_routes.py
seis_statics/: __init__.py  _validation.py  trace_shift.py
tests/: test_backend_smoke.py  test_create_refraction_static_ui_fixture.py  test_endpoints.py  test_external_seis_statics_dependency.py  test_picks_by_filename.py  test_refraction_design_matrix_diagnostics.py  test_refraction_failure_diagnostics.py  test_refraction_gather_preview.py  test_refraction_qc_drilldown.py  test_refraction_qc_endpoint_search.py  test_refraction_qc_pick_map.py  test_seis_statics_datum_math.py  test_seis_statics_first_break_residual_api.py  test_seis_statics_no_app_dependency.py  test_seis_statics_package_import.py  test_seis_statics_residual_design_matrix.py  test_seis_statics_residual_robust_solver.py  test_seis_statics_residual_sparse_solver.py  test_seis_statics_source_receiver_lag_api.py  test_seis_statics_time_term_apply_shift.py  test_seis_statics_time_term_design_matrix.py  test_seis_statics_time_term_imports.py  (+4 more)
(+783 files in other folders)
